force-app/main/default/objects/Asset/fields/Codigo_SENCE__c.field-meta.xml
<CustomField>
    <fullName>Codigo_SENCE__c</fullName>
    <label>Código SENCE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>