force-app/main/default/objects/Asset/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contrato del activo</description>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Activos del Contrato</relationshipLabel>
    <relationshipName>Activos_del_Contrato</relationshipName>
    <type>Lookup</type>
</CustomField>