force-app/main/default/objects/Asset/fields/Curso_Programado__c.field-meta.xml
<CustomField>
    <fullName>Curso_Programado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Curso programado asociado</description>
    <label>Curso Programado</label>
    <referenceTo>Curso_Programado__c</referenceTo>
    <relationshipLabel>Activos</relationshipLabel>
    <relationshipName>Activos</relationshipName>
    <type>Lookup</type>
</CustomField>