force-app/main/default/objects/Asset/fields/Dip_padre__c.field-meta.xml
<CustomField>
    <fullName>Dip_padre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Contiene el objeto padre(pack o diploma) del objeto  hijo</description>
    <label>Dip_padre</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Activos</relationshipLabel>
    <relationshipName>Activos</relationshipName>
    <type>Lookup</type>
</CustomField>