force-app/main/default/objects/Asset/fields/Fecha_de_Aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Aprobaci_n__c</fullName>
    <label>Fecha de Aprobación</label>
    <type>Date</type>
</CustomField>