force-app/main/default/objects/Asset/fields/Fecha_de_T_rmino__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_T_rmino__c</fullName>
    <label>Fecha de Término</label>
    <type>Date</type>
</CustomField>