force-app/main/default/objects/Asset/fields/Fecha_de_Termino__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Termino__c</fullName>
    <formula>Curso_Programado__r.Fecha_Fin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Término</label>
    <type>Date</type>
</CustomField>