force-app/main/default/objects/Asset/fields/id_activo__c.field-meta.xml
<CustomField>
    <fullName>id_activo__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>id activo</label>
    <type>AutoNumber</type>
</CustomField>