force-app/main/default/objects/Asset/fields/Marca_SENCE_del__c.field-meta.xml
<CustomField>
    <fullName>Marca_SENCE_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marca SENCE</label>
    <type>Checkbox</type>
</CustomField>