force-app/main/default/objects/Asset/fields/nombre_sence__c.field-meta.xml
<CustomField>
    <fullName>nombre_sence__c</fullName>
    <label>nombre_sence</label>
    <type>TextArea</type>
</CustomField>