force-app/main/default/objects/Asset/fields/OI_Asociada__c.field-meta.xml
<CustomField>
    <fullName>OI_Asociada__c</fullName>
    <label>OI Asociada</label>
    <length>180</length>
    <type>Text</type>
</CustomField>