force-app/main/default/objects/Asset/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>SKU</label>
    <length>180</length>
    <type>Text</type>
</CustomField>