force-app/main/default/objects/Asset/fields/tipo_programa__c.field-meta.xml
<CustomField>
    <fullName>tipo_programa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tipo programa</label>
    <type>Checkbox</type>
</CustomField>