force-app/main/default/objects/Asset/fields/Valor_SENCE__c.field-meta.xml
<CustomField>
    <fullName>Valor_SENCE__c</fullName>
    <label>Valor SENCE</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>