force-app/main/default/objects/Asset/fields/Version_ERP__c.field-meta.xml
<CustomField>
    <fullName>Version_ERP__c</fullName>
    <label>Version ERP</label>
    <length>180</length>
    <type>Text</type>
</CustomField>