force-app/main/default/objects/Asset/fields/Vigencia_SENCE__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_SENCE__c</fullName>
    <label>Vigencia SENCE</label>
    <type>Date</type>
</CustomField>