force-app/main/default/objects/Asset/validationRules/Curso_sueltos.validationRule-meta.xml
<ValidationRule>
    <fullName>Curso_sueltos</fullName>
    <active>false</active>
    <errorConditionFormula>IF(ISPICKVAL(Product2.Tipo__c,&apos;Cursos Teleduc&apos;), ISBLANK(Curso_Programado__c), FALSE)</errorConditionFormula>
    <errorDisplayField>Curso_Programado__c</errorDisplayField>
    <errorMessage>Favor de agregar la Versión de Curso.</errorMessage>
</ValidationRule>