force-app/main/default/objects/Asset/validationRules/verificar_estado_matriculado_en_activo.validationRule-meta.xml
<ValidationRule>
    <fullName>verificar_estado_matriculado_en_activo</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Status, &apos;Matriculado(102)&apos;))</errorConditionFormula>
    <errorDisplayField>AssetServicedById</errorDisplayField>
    <errorMessage>El estado debe ser Matriculado para el activo (prueba daaae c</errorMessage>
</ValidationRule>