force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Marca_SENCE_del__c</columns>
    <columns>Contrato__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Marco Melo</value>
    </filters>
    <label>Todos los activos</label>
</ListView>